--- a/.vscode/.prettierrc
+++ b/.vscode/.prettierrc
@@ -6,11 +6,5 @@
   "printWidth": 80,
   "tabWidth": 2,
   "arrowParens": "always",
-  "endOfLine": "lf",
-  "overrides": [
-    {
-      "files": ".prettierrc",
-      "options": { "parser": "json" }
-    }
-  ]
+  "endOfLine": "lf"
 }
