--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-	"vetur.validation.template": false,
+  "vetur.validation.template": false,
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "vue"],
-  
+
 	"vetur.experimental.templateInterpolationService": true,
-	"vetur.format.enable": false
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"editor.formatOnSave": true
 }
